--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
     <input type="text" id="author" placeholder="Author" required>
     <input type="text" id="isbn" placeholder="ISBN" required>
     <input type="date" id="publishedDate" required>
-    <input type="number" id="price" placeholder="Price" required>
+    <input type="number" min="0" step="0.01" id="price" placeholder="Price" required>
     <button type="submit">Save</button>
 </form>
 <script src="script.js"></script>
